fix: prevent iOS text resize truncation

--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,8 @@ body,
   width: 100%;
   height: 100%;
 }
+
+html {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
